2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_expected/test103-2.2:
	* test_expected/test103-2.4:
	* test_expected/test103 (deleted):
	  Test 103 uses syntax that only works from 2.4 on.
	  Break up expected results in broken pre-2.4 and working 2.4 and
	  later.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_todo/test78.py:
	* test_input/test78.py (deleted):
	  Move a test that breaks on python 2.6 and older.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_todo/import44.py:
	* test_todo/test34.py:
	* test_todo/test44.py:
	* test_todo/test70.py:
	* test_todo/test71.py:
	* test_todo/test77.py:
	* test_input/test44.py (deleted):
	* test_input/test34.py (deleted):
	* test_input/test77.py (deleted):
	* test_input/test71.py (deleted):
	* test_input/test70.py (deleted):
	* test_input/import44.py (deleted):
	  Move known broken tests to todo.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Debug every warning when it gets created.
	  Prefix all opcode debugging with DIS, makes it easier to find.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/Warning.py:
	* pychecker/options.py:
	* pychecker/pcmodules.py:
	* pychecker/utils.py:
	* pychecker/warn.py:
	  Clean up a bunch of pychecker warnings.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/Config.py:
	* pychecker/OP.py:
	* pychecker/OptionTypes.py:
	* pychecker/Stack.py:
	* pychecker/Warning.py:
	* pychecker/checker.py:
	* pychecker/function.py:
	* pychecker/msgs.py:
	* pychecker/options.py:
	* pychecker/pcmodules.py:
	* pychecker/printer.py:
	* pychecker/python.py:
	* pychecker/utils.py:
	* pychecker/warn.py:
	  Add Python mode lines.  Remove shebang lines where not needed.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py: