@@ -1,5 +1,11 @@
 2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* test/test_pychecker_function.py:
+	  Before 2.5, .0 for co_varnames was [outmost-iterable].
+	  Go figure.
+
+2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* test_expected/test103-2.2:
 	* test_expected/test103-2.4:
 	* test_expected/test103 (deleted):
